2006-03-07  Edward Hervey  <edward@fluendo.com>

	* autogen.sh:
	Clean the bogus common/ directory before checking it out from gstreamer
	cvs.

2006-03-07  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	* configure.ac:
	Add the path detected for pygtk and gst-python at configure to sys.path.
	This should solve problems like #333177

2006-03-07  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* pitivi/check.py:
	Checks at configure and at runtime for cairo support in PyGTK.

2006-03-06  Edward Hervey  <edward@fluendo.com>

	* pitivi/effects.py:
	better effect klass checking
	* pitivi/playground.py:
	more correct state changing when switching pipelines
	* pitivi/ui/complexinterface.py:
	zoomratio now belongs to a toplevel element
	* pitivi/ui/complexsource.py:
	python has lazy garbage collection, but gc.collect might induce heavy
	processing... this needs more thinking
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/ruler.py:
	* pitivi/ui/tracklayer.py:
	implement zoom with zoom buttons
	Remove a memleak
	* pitivi/ui/viewer.py:
	Insert necessary audio/video adapters, closes #332754

2006-02-27  Edward Hervey  <edward@fluendo.com>

	* pitivi/Makefile.am:
	* pitivi/instance.py:
	* pitivi/check.py:
	Added global application instance (instance.PiTiVi) to avoid having to
	do some crack like passing pitivi's self down all the objects for the
	one single object that needs it.
	* pitivi/effects.py:
	* pitivi/pitivi.py:
	Files fixed to use instance.PiTiVi
	* pitivi/timeline.py:
	wrong comment
	* pitivi/ui/complextimeline.py:
	Connect to composition duration update to inform ruler.
	* pitivi/ui/layerwidgets.py:
	cleanup
	
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/timelineobjects.py:
	* pitivi/ui/plumber.py:
	* pitivi/ui/viewer.py:
	switch to instance.PiTiVi
	* pitivi/ui/sourcefactories.py:
	First try at showing audio/video FX in the UI
	* pitivi/ui/tracklayer.py:
	First go at complex timeline source drag/drop