@@ -14,7 +14,7 @@ AC_SUBST(GNONLIN_REQ, 0.10.0.5)
 AC_SUBST(PYCAIRO_REQ, 1.0.0)
 
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
-AC_SUBST(ACLOCAL_AMFLAGS, "-I m4")
+AC_SUBST(ACLOCAL_AMFLAGS, "-I m4/ -I common/m4")
 
 AS_AC_EXPAND(LIBDIR, $libdir)
 AC_MSG_NOTICE(Storing library files in $LIBDIR)
@@ -119,8 +119,8 @@ AC_MSG_NOTICE(Using gstreamer-python installed in $PYGST_DIR)
 export PYTHONPATH=$PYGST_DIR:$PYTHONPATH
 
 dnl the gettext stuff needed
-AM_GNU_GETTEXT_VERSION(0.11.5)
-AM_GNU_GETTEXT([external])
+dnl AM_GNU_GETTEXT_VERSION(0.11.5)
+dnl AM_GNU_GETTEXT([external])
 
 AC_SUBST(PYTHONPATH)
 
